new/prusti/tests/pass/parse/invalid_prusti_attributes.stderr
error: "unexpected Prusti attribute; expected `prusti::requires` or `prusti::ensures`"
 --> $DIR/invalid_prusti_attributes.rs:6:1
  |
6 | #[prusti::requires::something(true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: "unexpected Prusti attribute; expected `prusti::requires` or `prusti::ensures`"
 --> $DIR/invalid_prusti_attributes.rs:9:11
  |
9 | #[prusti::ensures2(true)]
  |           ^^^^^^^^

error: "unexpected Prusti attribute; expected `prusti::invariant`"
  --> $DIR/invalid_prusti_attributes.rs:12:1
   |
12 | / fn test3() {
13 | |     for _ in 0..2 {
14 | |         #![prusti::invariant2(true)]
15 | |     }
16 | | }
   | |_^

error: "unexpected Prusti attribute; expected `prusti::invariant`"
  --> $DIR/invalid_prusti_attributes.rs:18:1
   |
18 | / fn test4() {
19 | |     for _ in 0..2 {
20 | |         #![prusti::invariant::something(true)]
21 | |     }
22 | | }
   | |_^

error: "unexpected Prusti attribute; expected `prusti::invariant`"
  --> $DIR/invalid_prusti_attributes.rs:28:20
   |
28 |         #![prusti::invariant2(true)]
   |                    ^^^^^^^^^^

error: "unexpected Prusti attribute; expected `prusti::invariant`"
  --> $DIR/invalid_prusti_attributes.rs:36:9
   |
36 |         #![prusti::invariant::something(true)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

